--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "backend",
+  "name": "radio-backend",
   "version": "1.0.0",
+  "description": "API para Radio Internacional",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "migrate": "npx sequelize-cli db:migrate",
+    "seed": "npx sequelize-cli db:seed:all",
+    "reset": "npx sequelize-cli db:migrate:undo:all && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "author": "Cristian",
+  "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "compression": "^1.8.0",
@@ -22,19 +25,20 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
-    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "multer": "^2.0.0",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
     "rate-limiter-flexible": "^2.0.0",
     "redis": "^5.0.1",
     "sequelize": "^6.37.7",
-    "sharp": "^0.34.2",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "sequelize-cli": "^6.6.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
