--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "ioredis": "^5.6.1",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
     "rate-limiter-flexible": "^2.0.0",
     "redis": "^5.0.1",
     "sequelize": "^6.37.7",
+    "sharp": "^0.34.2",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
